tests,documentation, auth, more
