# handlers/acquisitionsHandler.go
@@ -4,14 +4,22 @@ import (
 	"encoding/json"
 	"net/http"
 
-	"github.com/MonikaPalova/currency-master/db"
-	"github.com/MonikaPalova/currency-master/httputils"
 	"github.com/MonikaPalova/currency-master/model"
+	"github.com/MonikaPalova/currency-master/utils"
 )
 
 // acquisitions API
 type AcquisitionsHandler struct {
-	DB *db.AcquisitionsDBHandler
+	DB acqDB
+}
+
+type acqDB interface {
+	// gets all acquisitions
+	GetAll() ([]model.Acquisition, error)
+	// get all acquisitions of user
+	GetByUsername(username string) ([]model.Acquisition, error)
+	// saves a new acquisition to the database
+	Create(acq model.Acquisition) (*model.Acquisition, error)
 }
 
 // handles get all acquisitions request and applies username filter if needed
@@ -27,14 +35,14 @@ func (a AcquisitionsHandler) GetAll(w http.ResponseWriter, r *http.Request) {
 		acqs, err = a.DB.GetAll()
 	}
 	if err != nil {
-		httputils.RespondWithError(w, http.StatusInternalServerError, err, "could not retrieve acquisitions from database")
+		utils.RespondWithError(w, http.StatusInternalServerError, err, "could not retrieve acquisitions from database")
 		return
 	}
 
 	jsonResponse, err := json.Marshal(acqs)
 	if err != nil {
-		httputils.RespondWithError(w, http.StatusInternalServerError, err, "could not convert acquisitions to JSON")
+		utils.RespondWithError(w, http.StatusInternalServerError, err, "could not convert acquisitions to JSON")
 		return
 	}
-	httputils.RespondOK(w, jsonResponse)
+	w.Write(jsonResponse)
 }
